downgrading maven compiler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: post
   config:
-    import: configserver:${CONFIG_SERVER_URL}
+    import: optional:configserver:${CONFIG_SERVER_URL}
